--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "steam-manager-backend",
+  "name": "steam-manager-pro",
   "version": "2.0.0",
-  "description": "Full Steam Account Manager with AI bots and marketplace",
+  "description": "Professional Steam Account Management System",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "bots": "node steam-bots/bot-manager.js",
-    "build": "electron-builder",
-    "docker": "docker-compose up -d"
+    "telegram-bot": "node telegram-bot.js",
+    "steam-bots": "node steam-bots/bot-manager.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.0",
     "sqlite3": "^5.1.6",
-    "mongoose": "^7.0.0",
-    "node-steam-user": "^5.0.0",
-    "node-steam-totp": "^2.1.0",
-    "node-steam-tradeoffer-manager": "^2.10.0",
-    "node-steamcommunity": "^3.44.0",
-    "node-steam-market": "^2.3.2",
-    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "winston": "^3.9.0",
@@ -34,11 +26,21 @@
     "cheerio": "^1.0.0-rc.12",
     "node-cron": "^3.0.2",
     "uuid": "^9.0.0",
-    "electron": "^25.0.0",
-    "electron-builder": "^24.4.0"
+    "dotenv": "^16.3.0",
+    "steam-user": "^5.0.2",
+    "steam-totp": "^2.1.2",
+    "steam-tradeoffer-manager": "^2.11.2",
+    "steamcommunity": "^3.44.0",
+    "axios": "^1.4.0",
+    "node-fetch": "^3.3.1",
+    "ws": "^8.13.0",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "@electron-forge/cli": "^6.2.0"
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
