--- a/package.json
+++ b/package.json
@@ -1,46 +1,28 @@
 {
-  "name": "steam-manager-pro",
+  "name": "steam-manager-backend",
   "version": "2.0.0",
-  "description": "Professional Steam Account Management System",
+  "description": "Steam Manager Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "telegram-bot": "node telegram-bot.js",
-    "steam-bots": "node steam-bots/bot-manager.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.0",
-    "sqlite3": "^5.1.6",
+    "cors": "^2.8.5",
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
-    "winston": "^3.9.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^6.10.0",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.0",
-    "puppeteer": "^20.7.0",
-    "cheerio": "^1.0.0-rc.12",
-    "node-cron": "^3.0.2",
     "uuid": "^9.0.0",
     "dotenv": "^16.3.0",
-    "steam-user": "^5.0.2",
-    "steam-totp": "^2.1.2",
-    "steam-tradeoffer-manager": "^2.11.2",
-    "steamcommunity": "^3.44.0",
-    "axios": "^1.4.0",
-    "node-fetch": "^3.3.1",
-    "ws": "^8.13.0",
-    "node-cache": "^5.1.2"
+    "axios": "^1.6.0",
+    "node-cache": "^5.1.2",
+    "winston": "^3.9.0",
+    "helmet": "^7.0.0",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
   }
 }
