--- a/package.json
+++ b/package.json
@@ -1,11 +1,70 @@
 {
   "name": "steam-manager-pro",
-  "version": "2.0.0",
-  "description": "Steam Manager PRO with Emulation",
+  "version": "2.1.0",
+  "description": "Professional Steam Account Management System with Real-time Farming, Trading and Security Features",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "prod": "NODE_ENV=production node server.js",
+    "test": "jest --testPathPattern=tests/ --coverage",
+    "test:watch": "jest --testPathPattern=tests/ --watch",
+    "lint": "eslint . --ext .js,.jsx --fix",
+    "lint:check": "eslint . --ext .js,.jsx",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,html,css}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,json,md,html,css}\"",
+    "security": "npm audit --production",
+    "security:fix": "npm audit fix --production",
+    "clean": "rm -rf node_modules package-lock.json && npm install",
+    "backup": "node scripts/backup.js",
+    "restore": "node scripts/restore.js",
+    "stats": "node scripts/stats.js",
+    "telegram-bot": "node telegram-bot.js",
+    "pm2-start": "pm2 start ecosystem.config.js",
+    "pm2-stop": "pm2 stop steam-manager-pro",
+    "pm2-restart": "pm2 restart steam-manager-pro",
+    "pm2-logs": "pm2 logs steam-manager-pro",
+    "pm2-status": "pm2 status",
+    "docker-build": "docker build -t steam-manager-pro .",
+    "docker-run": "docker run -p 3000:3000 --env-file .env steam-manager-pro",
+    "docker-compose": "docker-compose up -d",
+    "docker-compose-down": "docker-compose down",
+    "heroku-logs": "heroku logs --tail --app steam-manager-pro",
+    "render-logs": "render logs"
+  },
+  "keywords": [
+    "steam",
+    "account-manager",
+    "farming",
+    "trading",
+    "drops",
+    "bot",
+    "automation",
+    "security",
+    "proxy",
+    "telegram-bot",
+    "web-app",
+    "realtime",
+    "dashboard"
+  ],
+  "author": "Steam Manager PRO Team",
+  "license": "SEE LICENSE IN LICENSE",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/steam-manager-pro.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/steam-manager-pro/issues"
+  },
+  "homepage": "https://github.com/yourusername/steam-manager-pro#readme",
+  "funding": {
+    "type": "patreon",
+    "url": "https://patreon.com/steammanagerpro"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -18,13 +77,165 @@
     "compression": "^1.7.4",
     "express-rate-limit": "^6.10.0",
     "node-cache": "^5.1.2",
-    "winston": "^3.9.0"
+    "winston": "^3.9.0",
+    "morgan": "^1.10.0",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "redis": "^4.6.0",
+    "ioredis": "^5.3.0",
+    "mongoose": "^7.3.0",
+    "sequelize": "^6.32.0",
+    "sqlite3": "^5.1.6",
+    "node-telegram-bot-api": "^0.61.0",
+    "steamapi": "^2.1.1",
+    "steam-user": "^4.25.1",
+    "steam-totp": "^2.1.2",
+    "steamcommunity": "^3.44.5",
+    "steam-tradeoffer-manager": "^2.10.5",
+    "cheerio": "^1.0.0-rc.12",
+    "node-fetch": "^2.7.0",
+    "axios": "^1.4.0",
+    "ws": "^8.13.0",
+    "puppeteer": "^21.0.0",
+    "puppeteer-extra": "^3.3.5",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "user-agents": "^1.0.1158",
+    "geoip-lite": "^1.4.7",
+    "ip": "^1.1.8",
+    "request-ip": "^3.3.0",
+    "validator": "^13.9.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "date-fns": "^2.30.0",
+    "chalk": "^4.1.2",
+    "figlet": "^1.6.0",
+    "cli-table3": "^0.6.3",
+    "progress": "^2.0.3",
+    "inquirer": "^8.2.6",
+    "ora": "^5.4.1",
+    "boxen": "^5.1.2",
+    "yargs": "^17.7.2",
+    "commander": "^10.0.1",
+    "config": "^3.3.9",
+    "convict": "^6.2.4",
+    "joi": "^17.9.2",
+    "pino": "^8.15.0",
+    "pino-pretty": "^9.4.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "node-schedule": "^2.1.1",
+    "cron": "^2.3.0",
+    "node-cron": "^3.0.2",
+    "pm2": "^5.3.0",
+    "cluster": "^0.7.7",
+    "os": "^0.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/react": "^14.0.0",
+    "supertest": "^6.3.3",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-security": "^1.7.1",
+    "prettier": "^2.8.8",
+    "@types/node": "^20.3.1",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "typescript": "^5.1.3",
+    "ts-node": "^10.9.1",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.0",
+    "babel-loader": "^9.1.2",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.0",
+    "postcss": "^8.4.24",
+    "postcss-loader": "^7.3.0",
+    "autoprefixer": "^10.4.14",
+    "mini-css-extract-plugin": "^2.7.6",
+    "html-webpack-plugin": "^5.5.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "image-minimizer-webpack-plugin": "^3.8.3",
+    "sharp": "^0.32.1",
+    "bundle-analyzer": "^0.0.1",
+    "webpack-bundle-analyzer": "^4.9.0"
   },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.js"
+    ],
+    "collectCoverageFrom": [
+      "server.js",
+      "telegram-bot.js",
+      "scripts/**/*.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 70,
+        "functions": 70,
+        "lines": 70,
+        "statements": 70
+      }
+    },
+    "testMatch": [
+      "**/tests/**/*.test.js",
+      "**/?(*.)+(spec|test).js"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "private": true,
+  "contributors": [
+    "Your Name <your.email@example.com>"
+  ],
+  "files": [
+    "server.js",
+    "telegram-bot.js",
+    "scripts/",
+    "tests/",
+    "data.json",
+    "backups/",
+    "README.md",
+    "LICENSE",
+    ".env.example",
+    "ecosystem.config.js",
+    "Dockerfile",
+    "docker-compose.yml",
+    "render.yaml"
+  ],
+  "volta": {
+    "node": "18.16.0"
   }
 }
